Prevent logo hiding on small screen

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -56,6 +56,7 @@ main {
     padding: 2px 10px;
     position: relative;
     overflow: hidden;
+    display: block;
     &::before {
       @include paperTexture;
       scale: 2;
